# sentry-init-handler

./: Readme.md  example.logconf  setup.cfg
src/sentry_init_handler/: __init__.py
