[metadata]
name             = sentry-init-handler
version          = 0.0.1
author           = Ningú
author_email     = n1ngu@riseup.net
url              = https://github.com/n1ngu/sentry-init-handler
description      = Abuse the logging configuration to inject a sentry_sdk.init call in CLI scripts
long_description = file: README.md
long_description_content_type = text/markdown
license          = BSD
platform         = any
classifiers      =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development

[options]
python_requires  = >=3.8
packages         = sentry_init_handler
package_dir      =
    =src
install_requires =
    sentry-sdk
scripts          =
    bin/sentry-cli-init-poc
